--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-<h1>Westley Howard</h1>
+<!doctype html>
+
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+
+  <title>IFSC 1310 | Westley Howard</title>
+  <meta name="description" content="Keyword Rich Description">
+  <meta name="author" content="Westley Howard">
+
+</head>
+
+<body>
+  <h1>IFSC 1310 | Westley Howard</h1>
+</body>
+</html>
