--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 </head>
 
 <body>
-  <h1>IFSC 1310 | Westley Howard</h1>
+    <h1>IFSC 1310 | Westley Howard</h1>
+    <nav>
+        <ul>
+            <li><a href="prototype/index.html">Prototype HTML Assignment</a></li>
+        </ul>
+    </nav>
 </body>
 </html>
