prototype/index.html

--- a/prototype/index.html
+++ b/prototype/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
 
   <title>HTML5 Assessment</title>
-  <meta name="description" content="Keyword Rich Description">
+  <meta name="description" content="First project made by Westley Howard, which covers the HTML5 Assessment and works to introduce the student into creating a website. Professor is Thomas Wallace, instructing IFSC 1310-01 at University of Arkansas, Little Rock aka UALR">
   <meta name="author" content="Westley Howard">
 
 </head>
