prototype/index.html

--- a/prototype/index.html
+++ b/prototype/index.html
@@ -1,14 +1,17 @@
 <!doctype html>
 
 <html lang="en">
+<!--this html tag tells the browser what language the site is in-->
 <head>
   <meta charset="utf-8">
-
+<!--this meta tag determines the characters that display on the webpage.-->
   <title>HTML5 Assessment</title>
+<!--title tags determine the words displayed on the tab itself.-->
   <meta name="description" content="First project made by Westley Howard, which covers the HTML5 Assessment and works to introduce the student into creating a website. Professor is Thomas Wallace, instructing IFSC 1310-01 at University of Arkansas, Little Rock aka UALR">
+<!--this meta tag utilizes a description, which is used by search engines to determine what the site is about, and whether to fetch this result based on if the keywords match closely enough-->
   <meta name="author" content="Westley Howard">
+<!--this meta tag tells the browser, or whatever system for that matter, which scans the HTML who the author of the site is-->
   
-  <!--This is CSS, and I have used it in order to properly create a break in the line. I have studied just a little bit for the purpose of figuring this out, as I agree that doing code properly is the priority. The only way to create this break in html I know of is <br><br>, which is sloppy and would not work for readability as well.-->
 </head>
 <body>
 <main>
