--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-
+  
   <title>IFSC 1310 | Westley Howard</title>
   <meta name="description" content="Keyword Rich Description">
   <meta name="author" content="Westley Howard">
-
+  <link href="assets/css/style.css" rel="stylesheet"/>
 </head>
 
 <body>
