--- a/css-demo/index.html
+++ b/css-demo/index.html
@@ -105,7 +105,7 @@
         </article>
       </div>
     </aside>
-    <footer id="colophon" role="contentinfo">
+    <footer id="colophon" class="primary" role="contentinfo">
       <h6>&copy; 2024 Your Name</h6>
     </footer>
   </main>
