--- a/css-demo/index.html
+++ b/css-demo/index.html
@@ -106,7 +106,7 @@
       </div>
     </aside>
     <footer id="colophon" class="primary" role="contentinfo">
-      <h6>&copy; 2024 Your Name</h6>
+      <h6>&copy; 2024 Westley Howard</h6>
     </footer>
   </main>
 </body>
