Added stylesheet to homepage

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
   <link href="assets/css/style.css" rel="stylesheet"/>
 </head>
 
-<body>
-    <h1>IFSC 1310 | Westley Howard</h1>
+<header class="primary"><h1>IFSC 1310 | Westley Howard</h1></header>
+<body class="main">
+ <div class="container">
     <nav>
         <ul>
             <li><a href="prototype/index.html">Prototype HTML Assignment</a></li>
@@ -33,5 +34,9 @@
             <img src="assets/img/flexboxfroggy.png" alt="Flexbox Froggy IMG" width="500" height="280"/>
         </figure>
     </nav>
+  </div>
+    <footer id="colophon" class="primary" role="contentinfo">
+        <h6>&copy; 2024 Westley Howard</h6>
+    </footer>
 </body>
 </html>
