--- a/prototype/index.html
+++ b/prototype/index.html
@@ -12,7 +12,7 @@
   <!--this meta tag utilizes a description, which is used by search engines to determine what the site is about, and whether to fetch this result based on if the keywords match closely enough-->
   <meta name="author" content="Westley Howard">
   <!--this meta tag tells the browser, or whatever system for that matter, which scans the HTML who the author of the site is-->
-
+  <link href="assets/css/style.css" rel="stylesheet"/>
 </head>
 
 <body>
