Tried to do positioning

--- a/positioning-labs/float-1.html
+++ b/positioning-labs/float-1.html
@@ -34,24 +34,46 @@
     }
     #navy {
       background-color: #001f3f;
+      float:left;
+      width:365px;
+      height:125px;
+      margin:15px;
     }
+    
     #teal {
       background-color: #39CCCC;
+      float:right;
+      width:365px;
+      height:125px;
+      margin:15px;
     }
     #blue {
       background-color: #0074D9;
+      float:left;
+      width:365px;
+      height:125px;
+      margin:15px;
     }
+
     #aqua {
       background-color: #7FDBFF;
+      float:right;
+      width:365px;
+      height:125px;
+      margin:15px;
     }
     #footer {
       background-color: #666;
+      clear:both;
     }
+
     h1 {
       color: #000;
       font-weight: normal;
       padding: 50px;
     }
+
+
   </style>
 </head>
 <body>
