--- a/positioning-labs/float-2.html
+++ b/positioning-labs/float-2.html
@@ -24,6 +24,11 @@
       text-align: center;
       line-height: 24px;
     }
+
+    .class{
+      margin:auto;
+    }
+
     #wrapper {
       background-color: #FFF;
       border: 1px solid #c0c0c0;
@@ -34,18 +39,46 @@
     }
     #navy {
       background-color: #001f3f;
+      float:left;
+      margin:5px;
+      margin-top:20px;
+      margin-bottom:20px;
+      width:189px;
+      height:150px;
     }
     #teal {
       background-color: #39CCCC;
+      float:left;
+      margin:5px;
+      margin-top:20px;
+      margin-bottom:20px;
+      width:189px;
+      height:150px;
     }
     #blue {
       background-color: #0074D9;
+      float:left;
+      margin:5px;
+      margin-top:20px;
+      margin-bottom:20px;
+      width:189px;
+      height:150px;
     }
     #aqua {
       background-color: #7FDBFF;
+      float:left;
+      margin:5px;
+      margin-top:20px;
+      margin-bottom:20px;
+      width:189px;
+      height:150px;
     }
     #footer {
       background-color: #666;
+      clear:both;
+      width:760px;
+      margin:auto;
+      margin-bottom:20px;
     }
     h1 {
       color: #000;
@@ -57,10 +90,10 @@
 <body>
   <h1>Float 2</h1>
   <section id="wrapper">
-    <div id="navy">Navy</div>
-    <div id="teal">Teal</div>
-    <div id="blue">Blue</div>
-    <div id="aqua">Aqua</div>
+    <div class="block" id="navy">Navy</div>
+    <div class="block" id="teal">Teal</div>
+    <div class="block" id="blue">Blue</div>
+    <div class="block" id="aqua">Aqua</div>
     <div id="footer">Footer</div>
   </section>
 </body>
