--- a/positioning-labs/absolute-1.html
+++ b/positioning-labs/absolute-1.html
@@ -34,18 +34,42 @@
     }
     #navy {
       background-color: #001f3f;
+      position:absolute;
+      top:0;
+      left:0;
+      width:200px;
+      height:180px;
     }
     #teal {
       background-color: #39CCCC;
+      position:absolute;
+      top:0;
+      right:0;
+      width:200px;
+      height:180px;
     }
     #blue {
       background-color: #0074D9;
+      position:absolute;
+      bottom:0;
+      left:0;
+      width:200px;
+      height:180px;
     }
     #aqua {
       background-color: #7FDBFF;
+      position:absolute;
+      bottom:0;
+      right:0;
+      width:200px;
+      height:180px;
     }
     #footer {
       background-color: #666;
+      position:relative;
+      width:180px;
+      height:180px;
+      margin:auto;
     }
     h1 {
       color: #000;
