--- a/positioning-labs/absolute2.html
+++ b/positioning-labs/absolute2.html
@@ -34,18 +34,42 @@
     }
     #navy {
       background-color: #001f3f;
+      position:absolute;
+      top:340;
+      left:340px;
+      width:200px;
+      height:180px;
     }
     #teal {
       background-color: #39CCCC;
+      position:absolute;
+      top:340;
+      right:340px;
+      width:200px;
+      height:180px;
     }
     #blue {
       background-color: #0074D9;
+      position:absolute;
+      bottom:-150px;
+      left:340px;
+      width:200px;
+      height:180px;
     }
     #aqua {
       background-color: #7FDBFF;
+      position:absolute;
+      bottom:-150px;
+      right:340px;
+      width:200px;
+      height:180px;
     }
     #footer {
       background-color: #666;
+      position:relative;
+      width:180px;
+      height:180px;
+      margin:300px;
     }
     h1 {
       color: #000;
