Made the code far better in positioning-labs

--- a/positioning-labs/float-1.html
+++ b/positioning-labs/float-1.html
@@ -32,39 +32,36 @@
       margin-left: auto;
       text-shadow: 2px 2px #000;
     }
-    #navy {
-      background-color: #001f3f;
+
+    #navy, #teal, #aqua, #blue{
       float:left;
       width:365px;
       height:125px;
-      margin:15px;
+      margin-left:20px;
+      margin-bottom:20px;
+    }
+
+    #navy {
+      background-color: #001f3f;
+      margin-top:20px;
     }
     
     #teal {
       background-color: #39CCCC;
-      float:right;
-      width:365px;
-      height:125px;
-      margin:15px;
+      margin-top:20px;
     }
     #blue {
       background-color: #0074D9;
-      float:left;
-      width:365px;
-      height:125px;
-      margin:15px;
     }
 
     #aqua {
       background-color: #7FDBFF;
-      float:right;
-      width:365px;
-      height:125px;
-      margin:15px;
     }
+   
     #footer {
       background-color: #666;
       clear:both;
+      margin:20px;
     }
 
     h1 {
