--- a/positioning-labs/float-2.html
+++ b/positioning-labs/float-2.html
@@ -24,11 +24,6 @@
       text-align: center;
       line-height: 24px;
     }
-
-    .class{
-      margin:auto;
-    }
-
     #wrapper {
       background-color: #FFF;
       border: 1px solid #c0c0c0;
@@ -37,63 +32,53 @@
       margin-left: auto;
       text-shadow: 2px 2px #000;
     }
+
+    #navy, #teal, #aqua, #blue{
+      float:left;
+      width:175px;
+      height:125px;
+      margin-left:20px;
+      margin-bottom:20px;
+      margin-top:20px;
+    }
+
     #navy {
       background-color: #001f3f;
-      float:left;
-      margin:5px;
-      margin-top:20px;
-      margin-bottom:20px;
-      width:189px;
-      height:150px;
     }
+    
     #teal {
       background-color: #39CCCC;
-      float:left;
-      margin:5px;
-      margin-top:20px;
-      margin-bottom:20px;
-      width:189px;
-      height:150px;
     }
     #blue {
       background-color: #0074D9;
-      float:left;
-      margin:5px;
-      margin-top:20px;
-      margin-bottom:20px;
-      width:189px;
-      height:150px;
     }
+
     #aqua {
       background-color: #7FDBFF;
-      float:left;
-      margin:5px;
-      margin-top:20px;
-      margin-bottom:20px;
-      width:189px;
-      height:150px;
     }
+   
     #footer {
       background-color: #666;
       clear:both;
-      width:760px;
-      margin:auto;
-      margin-bottom:20px;
+      margin:20px;
     }
+
     h1 {
       color: #000;
       font-weight: normal;
       padding: 50px;
     }
+
+
   </style>
 </head>
 <body>
-  <h1>Float 2</h1>
+  <h1>Float 1</h1>
   <section id="wrapper">
-    <div class="block" id="navy">Navy</div>
-    <div class="block" id="teal">Teal</div>
-    <div class="block" id="blue">Blue</div>
-    <div class="block" id="aqua">Aqua</div>
+    <div id="navy">Navy</div>
+    <div id="teal">Teal</div>
+    <div id="blue">Blue</div>
+    <div id="aqua">Aqua</div>
     <div id="footer">Footer</div>
   </section>
 </body>
