--- a/positioning-labs/absolute2.html
+++ b/positioning-labs/absolute2.html
@@ -25,51 +25,48 @@
       line-height: 24px;
     }
     #wrapper {
+      position:relative;
       background-color: #FFF;
       border: 1px solid #c0c0c0;
       width: 800px;
       margin-right: auto;
       margin-left: auto;
       text-shadow: 2px 2px #000;
+      height:700px
+    }
+
+    #wrapper > div {
+    position:absolute;
+    width:200px;
+    height:200px;
     }
     #navy {
       background-color: #001f3f;
-      position:absolute;
-      top:340;
-      left:340px;
-      width:200px;
-      height:180px;
+      top:0;
+      left:0;
     }
+    
     #teal {
       background-color: #39CCCC;
-      position:absolute;
-      top:340;
-      right:340px;
-      width:200px;
-      height:180px;
+      top:0;
+      right:0;
     }
     #blue {
       background-color: #0074D9;
-      position:absolute;
-      bottom:-150px;
-      left:340px;
-      width:200px;
-      height:180px;
+      bottom:0;
+      left:0;
     }
     #aqua {
       background-color: #7FDBFF;
-      position:absolute;
-      bottom:-150px;
-      right:340px;
-      width:200px;
-      height:180px;
+      bottom:0;
+      right:0;
     }
-    #footer {
+    div#footer {
       background-color: #666;
-      position:relative;
-      width:180px;
-      height:180px;
-      margin:300px;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
     }
     h1 {
       color: #000;
@@ -79,7 +76,7 @@
   </style>
 </head>
 <body>
-  <h1>Absolute 2</h1>
+  <h1>Absolute 1</h1>
   <section id="wrapper">
     <div id="navy">Navy</div>
     <div id="teal">Teal</div>
