Added in class activity for 10/30/2024

--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
         <figure>
             <img src="assets/img/flexboxfroggy.png" alt="Flexbox Froggy IMG" width="500" height="280"/>
         </figure>
+    <h2>Corel Vector In Class Activity</h2>
+        <figure>
+            <img src="assets/img/gang2.jpg" alt="prarie dog gang" width="500" height="333"/>
+        </figure>
     </nav>
   </div>
     <footer id="colophon" class="primary" role="contentinfo">
