Made the image funnier

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </figure>
     <h2>Corel Vector In Class Activity</h2>
         <figure>
-            <img src="assets/img/gang2.jpg" alt="prarie dog gang" width="500" height="333"/>
+            <img src="assets/img/bearjordan.jpg" alt="prarie dog gang" width="500" height="333"/>
         </figure>
     </nav>
   </div>
