fixed style on home page, started final

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>IFSC 1310 | Westley Howard</title>
   <meta name="description" content="Keyword Rich Description">
   <meta name="author" content="Westley Howard">
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   <link href="assets/css/style.css" rel="stylesheet"/>
 </head>
 
@@ -24,6 +25,7 @@
                     <li><a href="positioning-labs/float-1.html">Float 1</a></li>
                     <li><a href="positioning-labs/float-2.html">Float 2</a></li>
                 </ul>
+            <li><a href="dragon/index.html">SpaceX | Dragon</a></li>
             </li>
             <li>NEXT ASSIGNMENT</li>
         </ul>
