--- a/dragon/index.html
+++ b/dragon/index.html
@@ -1,12 +1,69 @@
 <!doctype html>
 
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
-  
+
   <title>IFSC 1310 | SpaceX Dragon</title>
   <meta name="description" content="Keyword Rich Description">
   <meta name="author" content="Westley Howard">
+  <link href="assets/css/style.css" rel="stylesheet"/>
+  <link href="https://fonts.googleapis.com/css2?family=Quantico:ital,wght@0,400;0,700;1,400;1,700&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 
-<header class="primary"><h1>IFSC 1310 | SpaceX Dragon</h1></header>
+<body>
+  <main>
+    <header id="primary" class="container">
+      <h1>IFSC 1310 | SpaceX Dragon</h1>
+      <nav role="navigation" class="primary">
+        <ul>
+          <li><a href="dragon/faqs.html">FAQ</a></li>
+          <li><a href="dragon/history.html">History</a></li>
+        </ul>
+      </nav>
+    </header>
+
+    <div id="primary">
+
+      <section id="primary" class="container">
+        <h2>Dragon Vehicle Overview:</h2>
+
+        <p>Dragon is a free-flying spacecraft designed to deliver both cargo and people to orbiting destinations. Dragon made history in 2012 when it became the first commercial spacecraft in history to deliver cargo to the International Space Station and safely return cargo to Earth, a feat previously achieved only by governments. It is the only spacecraft currently flying that is capable of returning significant amounts of cargo to Earth. Currently Dragon carries cargo to space, but it was designed from the beginning to carry humans. Under an agreement with NASA, SpaceX is now developing the refinements that will enable Dragon to fly crew. Dragon's first manned test flight is expected to take place as early as 2018.</p>
+
+        <h3>Configurations:</h3>
+
+        <h4>Cargo - Resupply the Space Station</h4>
+
+        <ul>
+          <li>DELIVERY AND RETURN SERVICES - Dragon is the first commercial spacecraft to deliver cargo to the International Space Station and currently the only cargo spacecraft flying capable of returning significant amounts of cargo to Earth. Dragon accommodates pressurized cargo in the capsule as well as unpressurized cargo in its trunk</li>
+          <li>VERSATILE CARGO RACKS - The racks are a honeycomb carbon-aluminum construction designed for efficient packing in a zero-gravity environment. They accommodate a variety of standard-size NASA cargo bags as well as freezers for carrying materials such as biological samples.</li>
+        </ul>
+
+        <h4>Crew - Taking Humans into Space</h4>
+
+        <ul>
+          <li>PARTNERSHIP WITH NASA - Dragon was designed from the outset to fly humans to space. Under an agreement with NASA, SpaceX is making upgrades to Dragon to allow for crew carrying capability.</li>
+          <li>CREW UPGRADES - Dragon will be the world’s safest and most reliable crew transport vehicle, with seating for seven, life-support systems, controls with manual capability, and a powered launch escape system.</li>
+          <li>FIRST LAUNCH - Upgrades to Dragon are currently in progress. Dragon’s first manned test flight is expected to take place as early as 2018.</li>
+        </ul>
+
+        <h4>Dragon Lab - A FREE-FLYING MICROGRAVITY LABORATORY</h4>
+
+        <ul>
+          <li>FACILITATING RESEARCH - DragonLab is a free-flying, unmanned platform designed for research and testing in a microgravity environment independent of the International Space Station.</li>
+          <li>LONGEVITY - It can transport payloads, experiments, instruments, and sensors into space and back to Earth on missions ranging from one week to two years.</li>
+          <li>CAPABILITIES - DragonLab can readily accommodate instrument and sensor testing, space physics and relativity experiments, radiation effects research, and many other microgravity tests.</li>
+        </ul>
+
+      </section>
+    </div>
+
+    <footer id="colophon" class="primary" role="contentinfo">
+      <h6>&copy; 2024 Westley Howard</h6>
+    </footer>
+
+  </main>
+</body>
+
+</html>
