Added Corel Vector Star Logo

--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
         <figure>
             <img src="assets/img/bearjordan.jpg" alt="prarie dog gang" width="500" height="333"/>
         </figure>
+    <h2>Star Logo Through Corel Vector</h2>
+        <figure>
+            <img src="assets/img/starlogo.jpg" alt="Flexbox Froggy IMG" width="400" height="300"/>
+        </figure>
     </nav>
   </div>
     <footer id="colophon" class="primary" role="contentinfo">
