pushed code from yesterday's class

--- a/dragon/index.html
+++ b/dragon/index.html
@@ -61,6 +61,7 @@
           <li>CAPABILITIES - DragonLab can readily accommodate instrument and sensor testing, space physics and relativity experiments, radiation effects research, and many other microgravity tests.</li>
         </ul>
       </article>
+      </aside>
     </div>
   </section>
 
@@ -76,7 +77,7 @@
     </div>
   </aside>
   <footer id="colophon" role="contentinfo">
-    <h6>&copy; 2024 SpaceX | <a href="mailto:wjhoward@ualr.edu"> Report a Problem</a></h6>
+    <h6>&copy; 2024 SpaceX | <a href="https://wjhoward424.wufoo.com/forms/zueq8xe03i1u3i/"> Report a Problem</a></h6>
   </footer>
 </body>
 </html>
