Finally fixed my CSS

--- a/dragon/faqs.html
+++ b/dragon/faqs.html
@@ -1,12 +1,25 @@
-<!doctype html>
-
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  
-  <title>IFSC 1310 | SpaceX Dragon</title>
-  <meta name="description" content="Keyword Rich Description">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial scale=1.0">
+  <title>SpaceX Dragon</title>
+  <link rel="stylesheet" href="assets/css/style.css" />
   <meta name="author" content="Westley Howard">
+  <meta name="description" content="Keyword Rich Narrative">
+  <meta name="robots" content="noindex">
 </head>
-
-<header class="primary"><h1>IFSC 1310 | SpaceX Dragon</h1></header>
+<body>
+  <header role="banner" class="primary">
+    <h1><a href="index.html">SpaceX Dragon</a></h1>
+    <h2>First Private Spacecraft to the Space Station</h2>
+    <nav role="navigation">
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="history.html">History</a></li>
+        <li><a href="faqs.html">FAQ</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
