Finished SpaceX Dragon V2; Attempted w3form, switched back to wufoo after minor technical difficulties harming user QOL

--- a/index.html
+++ b/index.html
@@ -26,10 +26,15 @@
                     <li><a href="positioning-labs/float-2.html">Float 2</a></li>
                 </ul>
             <li><a href="dragon/index.html">SpaceX | Dragon</a></li>
+            <li><a href="slick-demo/index.html">Image Carousel</a></li> 
+            <li><a href="dragonv2/index.html">SpaceX | Dragon | V2</a></li>
             </li>
             <li>NEXT ASSIGNMENT</li>
         </ul>
     <h2>Thoughts on Web Accessibility</h2>
+        <p>To me, web accessibility means for a website to be fully functional and operable by just about anyone on the planet who can view the website. This is not just for the sake of making the web accessible for those with disabilities, either. In order to be truly accessible, the audience must be able to understand and be able to properly utilize the information they are provided in the website, through familiarity or a linear design. Ideally, we can find that an individual will be able to access the website with few to no issues. The individual must know when they are about to commit a change that would remove prior progress, submit a form, or do just about anything they may not truly intend for. Allowing the flow of information to be accessible to all is the key to internet's globalization.</p>
+    <h2>Flexbox Completion</h2>
+    <h2>Thoughts on Progressive Enhancement</h2>
         <p>To me, web accessibility means for a website to be fully functional and operable by just about anyone on the planet who can view the website. This is not just for the sake of making the web accessible for those with disabilities, either. In order to be truly accessible, the audience must be able to understand and be able to properly utilize the information they are provided in the website, through familiarity or a linear design. Ideally, we can find that an individual will be able to access the website with few to no issues. The individual must know when they are about to commit a change that would remove prior progress, submit a form, or do just about anything they may not truly intend for. Allowing the flow of information to be accessible to all is the key to internet's globalization.</p>
     <h2>Flexbox Completion</h2>
         <figure>
